@@ -1,14 +1,5 @@
 /* File automatically generated by Parser/asdl_c.py. */
 
-
-/*
-   __version__ e0e663132363.
-
-   This module must be committed separately after each AST grammar change;
-   The __version__ number is set to the revision number of the commit
-   containing the grammar change.
-*/
-
 #include "Python.h"
 #include "Python-ast.h"
 
@@ -6749,8 +6740,6 @@ PyInit__ast(void)
         if (PyDict_SetItemString(d, "AST", (PyObject*)&AST_type) < 0) return
             NULL;
         if (PyModule_AddIntConstant(m, "PyCF_ONLY_AST", PyCF_ONLY_AST) < 0)
-                return NULL;
-        if (PyModule_AddStringConstant(m, "__version__", "e0e663132363") < 0)
                 return NULL;
         if (PyDict_SetItemString(d, "mod", (PyObject*)mod_type) < 0) return
             NULL;
